# qiskit-function-templates

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  constraints.txt  deploy_and_run.ipynb  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements-e2e.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: _unit-tests.yml  dependabot.yml  run-hamsim.yml  run-lint.yml  run-sqd-pcm.yml  run-tests.yml  validate-base-templates.yml
base_templates/: application_function_template.py  circuit_function_template.py
chemistry/: __init__.py
chemistry/sqd_pcm/: README.md  __init__.py  deploy_and_run.ipynb  requirements.txt
chemistry/sqd_pcm/source_files/: solve_solvent.py  sqd_pcm.py  sqd_pcm_entrypoint.py
chemistry/sqd_pcm/test/: __init__.py  test_sqd_pcm.py
chemistry/sqd_pcm/test/data/: methylamine.py  test_molecule.py  water_mini_count_dict.txt
physics/hamiltonian_simulation/: README.md  __init__.py  deploy_and_run.ipynb  hamiltonian_simulation.py  requirements-dev.txt  requirements.txt  template.py
physics/hamiltonian_simulation/.ipynb_checkpoints/: deploy_and_run-checkpoint.ipynb
physics/hamiltonian_simulation/source_files/: hamiltonian_sim_entrypoint.py  hamiltonian_simulation.py
physics/hamiltonian_simulation/test/: __init__.py  test_hamiltonian_simulation.py
template_implementations/physics/hamiltonian_simulation/: README.md  __init__.py  hamiltonian_simulation.py
templates/: application_function_template.py  circuit_function_template.py
test/: base.py
test/physics/hamiltonian_simulation/: test_template.py
tools/: check_copyright.py  validate_base_templates.py  verify_headers.py
